--- a/triptogether/.gitignore
+++ b/triptogether/.gitignore
@@ -35,3 +35,11 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+### Generated Files ###
+**/generated
+
+### Database ###
+/src/main/resources/application.yml
+/src/main/resources/application-dev.yml
