--- a/triptogether/build.gradle
+++ b/triptogether/build.gradle
@@ -33,6 +33,23 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//유효성 검사
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+
+	//QueryDSL 설정
+//	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+//	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+//	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+//	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+
+
+}
+//매번 새로 생성된 Q클래스를 빌드하기 위함.
+clean {
+	delete file('build/generated')
 }
 
 tasks.named('test') {
