--- a/triptogether/build.gradle
+++ b/triptogether/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
 
 	//oauth
-	//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 
 	//QueryDSL 설정
